INTYGFV-15994: Refactored